--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
     <artifactId>tika-parsers</artifactId>
     <version>1.21</version>
 </dependency>
-
+<dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.4</version>
+    </dependency>
     </dependencies>
 </project>
