--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
     <version>1.21</version>
 </dependency>
 <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+<dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
         <version>2.4</version>
